build.gradle and application.properties configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,23 @@
 #Fri Nov 29 07:52:04 UTC 2024
-datasources.default.driver-class-name=org.h2.Driver
 datasources.default.password=
-datasources.default.url=jdbc\:h2\:mem\:devDb;LOCK_TIMEOUT\=10000;DB_CLOSE_ON_EXIT\=FALSE
-datasources.default.username=sa
-jpa.default.properties.hibernate.hbm2ddl.auto=update
+datasources.default.username=root
+datasources.default.dialect=MYSQL
+datasources.default.db-type=mysql
+datasources.default.driver-class-name=com.mysql.cj.jdbc.Driver
+datasources.default.url=jdbc:mysql://localhost:3306/test
+
+jpa.default.entity-scan.packages=com.github.learwin.platepalbackend
+jpa.default.properties.hibernate.hbm2ddl.auto=none
+jpa.default.properties.hibernate.show_sql=true
+jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
 micronaut.application.name=platepal
+
+flyway.datasources.default.enabled=true
+
+#Liquibase
+#liquibase.datasources.default.change-log=classpath:db/liquibase-changelog.xml
+#liquibase.enabled=true
+#liquibase.datasources.default.enabled=false
+
+
