Added constants for Imagepaths Added ability to POST/GET Zutat Images

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,9 @@ jpa.default.properties.hibernate.show_sql=true
 jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 micronaut.application.name=platepal
-
+micronaut.server.multipart.enabled=true
+micronaut.server.multipart.max-file-size= 5MB
+micronaut.server.multipart.max-request-size: 5MB
 flyway.datasources.default.enabled=true
 
 #Liquibase
