--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,19 @@ micronaut.application.name=platepal
 micronaut.server.multipart.enabled=true
 micronaut.server.multipart.max-file-size= 5MB
 micronaut.server.multipart.max-request-size: 5MB
+#Swagger
+micronaut.openapi.enabled=true
+micronaut.openapi.controller-mapping=/api
+micronaut.swagger.ui.enabled=true
+micronaut.swagger.ui.path=/swagger-ui
+micronaut.openapi.file.format=JSON
+micronaut.router.static-resources.swagger.paths=classpath:META-INF/swagger
+micronaut.router.static-resources.swagger.mapping=/swagger/**
+micronaut.router.static-resources.swagger-ui.paths=classpath:META-INF/swagger/views/swagger-ui
+micronaut.router.static-resources.swagger-ui.mapping=/swagger-ui/**
+
+
+
 flyway.datasources.default.enabled=true
 
 #Liquibase
