--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,10 @@ jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 micronaut.application.name=platepal
 micronaut.server.multipart.enabled=true
-micronaut.server.multipart.max-file-size= 5MB
-micronaut.server.multipart.max-request-size: 5MB
-#Swagger
+micronaut.server.multipart.max-file-size=5MB
+micronaut.server.multipart.max-request-size=5MB
+
+# Swagger
 micronaut.openapi.enabled=true
 micronaut.openapi.controller-mapping=/api
 micronaut.swagger.ui.enabled=true
@@ -35,4 +36,10 @@ flyway.datasources.default.enabled=true
 #liquibase.enabled=true
 #liquibase.datasources.default.enabled=false
 
-
+# CORS Configuration
+micronaut.server.cors.enabled=true
+micronaut.server.cors.configurations.default.allowedOrigins=http://localhost:3000
+micronaut.server.cors.configurations.default.allowedMethods=GET,POST,PUT,DELETE,OPTIONS
+micronaut.server.cors.configurations.default.allowedHeaders=Content-Type,Authorization
+micronaut.server.cors.configurations.default.allowCredentials=true
+micronaut.server.cors.configurations.default.maxAge=3600
